--- a/solution.html
+++ b/solution.html
@@ -2,6 +2,8 @@
   <h1>AI Code Editor Project</h1>
 
   <h2>Solution</h2>
+  
+  <a href="https://github.com/SharonGriffith/ide-sgriffith">GitHub</a>
 
   <a href="video.html">Back</a>
 </html>
