--- a/demo.html
+++ b/demo.html
@@ -2,6 +2,32 @@
   <h1>AI Code Editor Project</h1>
 
   <h2>Demo</h2>
+  
+  <div>
+  <p>For your demo:
+  
+  <p>Run the code locally with the command python3 -m http.server 8000
+  
+  <p><a href="http://localhost:8000/">Demo</a>
+
+<p>Make sure to explain how you tackled each requirement of the project
+<p>Learn about the structure of a demo here
+<p>Check out this example demo
+<p>When uploading to YouTube, make sure captions are enabled
+
+<p>Project Requirements:
+
+<p>​Add a chat interface for users to ask questions and get answers - see 36:11 in the Project Walkthrough video posted above
+<p>​If a user's code doesn't compile, use AI to suggest a fix
+​Let the user select a segment of code and chat with it inline - see 1:09:03 in the Project Walkthrough video posted above
+
+<p>Challenges:
+
+<p>Make a pull request on the Judge0 IDE repo
+Add autocomplete suggestions as the user is typing
+Ensure minimal latency in the AI responses
+Add a bug finder feature that can identify bugs in a user’s code
+</div>
 
   <a href="video.html">Back</a>
 </html>
