--- a/future.html
+++ b/future.html
@@ -2,6 +2,8 @@
   <h1>AI Code Editor Project</h1>
 
   <h2>Future</h2>
+  
+  <p>Try to get this project finished.</p>
 
   <a href="video.html">Back</a>
 </html>
