--- a/problem.html
+++ b/problem.html
@@ -2,6 +2,10 @@
   <h1>AI Code Editor Project</h1>
 
   <h2>Problem</h2>
+  
+  <div>
+  <p>For this project, imagine you are an engineer at a startup looking to compete with LeetCode. You are tasked with building out AI features on top of the Judge0 IDE to enhance the user experience.
+</div>
 
   <a href="video.html">Back</a>
 </html>
