--- a/struggle.html
+++ b/struggle.html
@@ -2,6 +2,13 @@
   <h1>AI Code Editor Project</h1>
 
   <h2>Struggle</h2>
+  
+  <ul>
+  <li>The Appstarter project submission page is NOT taking my YouTube URL.  Even though it has captions enabled.  This is preventing me from submitting the project.</li>
+  <li>Full-time job.</li>
+  <li>Project drops on Mondays, I can only start working on projects on Friday night, leaving only 2 days to get the project done.</li>
+  <li>The announcements/email for scheduling the Monday night call are always "on the day of" instead of in advance, so I have to scramble to register and logon.  Most Mondays I'm not home from work yet when the call happens (I'm in Mountain time zone).</li>
+  </ul>
 
   <a href="video.html">Back</a>
 </html>
