--- a/solution.html
+++ b/solution.html
@@ -3,7 +3,7 @@
 
   <h2>Solution</h2>
   
-  <a href="https://github.com/SharonGriffith/ide-sgriffith">GitHub</a>
+  <p><a href="https://github.com/SharonGriffith/ide-sgriffith">GitHub</a></p>
 
   <a href="video.html">Back</a>
 </html>
